# RWF2000-pytorch-version

./: .gitignore  Dockerfile  README.md  augmentation.py  build_dataset.py  config.properties  config.py  datamodule.py  export_jit.py  export_onnx.py  handler.py  index_to_classes.json  inference.ipynb  inference.py  inference_ncnn.py  inference_onnx.py  model (conflicted).py  model.py  pyproject.toml  rayserve.yaml  requirements.txt  rwf2000.yaml  send_request.py  serve_deployment.py  test_request.ipynb  train.py  utils.py
Dataset/: __init__.py  augmentation.py  datamodule.py
dataset/: augmentation.py  build_dataset.py  datamodule.py
examples/: inference.py  inference_ncnn.py  inference_onnx.py  inference_openvino.py  send_request.py  train.py
log_config/: mlflow.yaml  neptune.yaml  tensorboard.yaml
model_dir/: fgn.onnx  fgn.param  fgn_sim.onnx  model-3.ckpt  model.ckpt  model2.ckpt  model_jit.pt
model_dir/openvino/: FGN.xml
model_store/: flow-gated-network [conflicted 2].mar  flow-gated-network [conflicted 4].mar  flow-gated-network [conflicted].mar  flow-gated-network.mar
notebooks/: FGN_Git.ipynb
rwf2000_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: __init__.py  export_jit.py  export_script.py  utils.py
src/data/: __init__.py  augmentation.py  build_dataset.py  datamodule.py  dataset.py
src/models/: .metrics.py [conflicted].kate-swp  __init__.py  callbacks.py  fgn_model.py  lightning_model.py  metrics.py  train.py
src/rayserve/: deployment.py
vis/: dynamic_cropping.py  flow.py  flows_visualize.py
(+6 files in other folders)
